# Codeforces

./: .gitignore  CMakeLists.txt  README.md
round_1033/: CMakeLists.txt
round_1033/A_square_of_rectangles/: CMakeLists.txt  README.md  main.c
round_1033/B_square_pool/: CMakeLists.txt  README.md  main.c
round_1037/: CMakeLists.txt
round_1037/A_only_one_digit/: CMakeLists.txt  main.c
round_1037/B_no_casino_in_the_mountains/: CMakeLists.txt  main.c
round_1037/C_i_will_definitely_make_it/: CMakeLists.txt  main.c
round_1043/: CMakeLists.txt
round_1043/A_homework/: CMakeLists.txt  main.c
round_1045/: CMakeLists.txt
round_1045/A_painting_with_2_colors/: CMakeLists.txt  main.c
round_180/: CMakeLists.txt
round_180/A_race/: CMakeLists.txt  main.c
round_180/B_shrinking_array/: CMakeLists.txt  README.md  main.c
round_180/C_coloring_game/: CMakeLists.txt  README.md  main.c
